--- a/style.css
+++ b/style.css
@@ -14,6 +14,23 @@ body {
   text-align: center;
 }
 
+.btn {
+  border: 0;
+  background-color: #fff;
+  color: #516dff;
+  padding: 15px 20px;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
 .screen {
   display: flex;
   flex-direction: column;
